# moveit_pnp_ws

./: .gitmodules  README.md
config/: shelves.yaml
src/action_msg/: CMakeLists.txt  package.xml
src/action_msg/action/: Marker.action  Motion.action  Object.action  Placement.action
src/marker_recog_server/: CMakeLists.txt  package.xml
src/marker_recog_server/include/: marker_recog_server_node.h
src/marker_recog_server/src/: marker_recog_server_node.cpp
src/moveit_pnp_server/: CMakeLists.txt  package.xml
src/moveit_pnp_server/app/: CMakeLists.txt
src/moveit_pnp_server/config/: shelves.yaml
src/moveit_pnp_server/include/: moveit_node.h
src/moveit_pnp_server/launch/: moveit_pnp_server.launch
src/moveit_pnp_server/meshes/: backyard.scene
src/moveit_pnp_server/src/: moveit_node.cpp
src/object_recog_server/: CMakeLists.txt  package.xml
src/object_recog_server/include/: object_recog_server_node.h
src/object_recog_server/src/: object_recog_server_node.cpp
src/pick_place_client/: CMakeLists.txt  package.xml
src/pick_place_client/include/: pick_place_client_node.h
src/pick_place_client/src/: pick_place_client_node.cpp
src/placement_recog_server/: CMakeLists.txt  package.xml
src/placement_recog_server/include/: placement_recog_server_node.h
src/placement_recog_server/src/: placement_recog_server_node.cpp
